--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "EcmaScript Specification Examples",
+  "name": "ecmascript-specification-examples",
   "version": "1.0.0",
-  "description": "JavaScript example starter project",
+  "description": "",
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html --open",
@@ -12,5 +12,5 @@
     "@babel/core": "7.2.0",
     "parcel-bundler": "^1.6.1"
   },
-  "keywords": ["javascript", "ECMAScript"]
+  "keywords": []
 }
